Fix overflow horizontal scroll bug

--- a/static/sass/custom/_search-results.scss
+++ b/static/sass/custom/_search-results.scss
@@ -110,7 +110,7 @@
 
 .entity-search-selector {
   display: flex;
-  overflow-x: unset;
+  overflow-x: hidden;
 
   @media (min-width: $breakpoint-small) {
     display: inline-flex;
